k8s/svc-ds.yaml
apiVersion: v1
kind: Service
metadata:
  name: ds
spec:
  selector:
    app: ds
    project: 10n1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
