k8s/svc-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
    project: 10n1
spec:
  selector:
    app: ui
    project: 10n1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
