k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 10n1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/add-base-url: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: 10n1.tikalk.dev, 10n1.infra.tikalk.dev

spec:
  rules:
    - host: 10n1.tikalk.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 3000
        - path: /graphql
          pathType: Prefix
          backend:
            service:
              name: ds
              port:
                number: 4000
        - path: /ds
          pathType: Prefix
          backend:
            service:
              name: ds
              port:
                number: 4000
    - host: 10n1.infra.tikalk.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 3000
        - path: /graphql
          pathType: Prefix
          backend:
            service:
              name: ds
              port:
                number: 4000
        - path: /ds
          pathType: Prefix
          backend:
            service:
              name: ds
              port:
                number: 4000
  tls:
    - hosts:
      - 10n1.tikalk.dev
      - 10n1.infra.tikalk.dev
      secretName: 10n1.tikal.io-tls
